--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRONSINGTON</title>
+
+    <!-- Lightning Address -->
+    <meta name="lightning" content="dylan@my2sats.xyz">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="TRONSINGTON">
+    <meta property="og:description" content="Stack sats. Stay punk.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tronsington.xyz">
+    <meta property="og:image" content="https://tronsington.xyz/og-image.svg">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@tronsington">
+    <meta name="twitter:title" content="TRONSINGTON">
+    <meta name="twitter:description" content="Stack sats. Stay punk.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path fill='%23F7931A' d='M7 2v11h3v9l7-12h-4l4-8z'/></svg>">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=VT323&display=swap" rel="stylesheet">
